# report

./: package-lock.json  package.json  relay.config.js  schema.graphql  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: .env  Cargo.toml  schema.graphql
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: branch.rs  brand.rs  category.rs  lib.rs  sales.rs  web_product.rs
backend/crates/migration/: Cargo.toml
backend/crates/server/: Cargo.toml
backend/crates/server/src/: brand.rs  clickhouse.rs  components.rs  data_source.rs  db.rs  graphql.rs  lib.rs  main.rs
backend/crates/server/src/database/: clickhouse.rs  copy_from_sea_orm.rs  mod.rs
backend/crates/server/src/graphql/: mutation.rs  schema.rs
backend/crates/server/src/yoy/: mod.rs  yoytable.rs
src/: App.tsx  BrandList.tsx  main.tsx  query.ts
src/__generated__/: BrandListQuery.graphql.ts  BrandQuery.graphql.ts  FilterDrawerQuery.graphql.ts  TestQuery.graphql.ts
src/app/: LayoutComponents.tsx  Reports.tsx
src/components/: Brand.tsx  BrandList.tsx  Dashboard.tsx  FilterDrawer.tsx  Filters.tsx  Helper.tsx  TabsMenu.tsx  Test.tsx
src/relay/: relayEnvironment.ts
