[workspace]
members = [
  "crates/*"
]
default-members = ["crates/server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.96"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
axum = "0.8.1"
chrono = "0.4.40"
clap = "4.5.31"
clickhouse = { version = "0.13.0", default-features = false }
dotenvy = "0.15.7"
itertools = "0.14.0"
sea-orm = "1.1.0"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
