[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true, features = ["macros"] }
base64 = "0.22.1"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clickhouse = { workspace = true, optional = true }
dotenvy = { workspace = true }
elasticsearch = "8.17.0-alpha.1"
entity = { path = "../entity" }
itertools = { workspace = true }
num = "0.4.3"
percent-encoding = "2.3"
reqwest = { version = "0.12.14", features = ["json"] }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
sea-query = "0.32.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0.12"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[features]
default = ["clickhouse"]
clickhouse = ["dep:clickhouse"]
